@@ -10,6 +10,7 @@ Version 0.31, released UNRELEASED
 * Optimize journal use to have fewer round-trips. This matters when the
   journal is stored on a high-latency storage, such as an SFTP server.
 * Now handles better missing key or node sizes in the metadata.
+* All exceptions thrown by larch are now subclasses of `larch.Error`.
 
 Version 0.30, released 2012-04-29
 ---------------------------------
